test/good/classes/unification03.px

class Base def
    x: Int

    func f(): Void def
        print "Base"

class Sub1(Base) def
    constructor def
        this.x = 1

    func f(): Void def
        print "Sub1"

class Sub2(Base) def
    constructor def
        this.x = 2


a: [Base] = [Sub2()]
print a[0].x
a[0] = Base()
print a[0].x

func f(t: Base*Base): Base*Base def
    return t

f((Base(), Sub2()))
f((Sub1(), Base())).a.f()
f((Base(), Base()))
f((Sub1(), Sub1()))
f((Sub1(), Sub2())).b.f()
