test/bad/classes/type07.px

class A def
    Int x: 1

class B(A) def
    Int y: 2

b = [[B()]]
[[[A]]]*Int t = [b], 6
